JsoupXpath/src/main/java/org/seimicrawler/xpath/antlr/XpathParser.java
// Generated from resources/Xpath.g4 by ANTLR 4.7.2
package org.seimicrawler.xpath.antlr;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XpathParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, NodeType = 5, Number = 6, AxisName = 7, PATHSEP = 8,
            ABRPATH = 9, LPAR = 10, RPAR = 11, LBRAC = 12, RBRAC = 13, MINUS = 14, PLUS = 15, DOT = 16,
            MUL = 17, DIVISION = 18, MODULO = 19, DOTDOT = 20, AT = 21, COMMA = 22, PIPE = 23, LESS = 24,
            MORE_ = 25, LE = 26, GE = 27, EQUALITY = 28, INEQUALITY = 29, START_WITH = 30, END_WITH = 31,
            CONTAIN_WITH = 32, REGEXP_WITH = 33, REGEXP_NOT_WITH = 34, COLON = 35, CC = 36,
            APOS = 37, QUOT = 38, Literal = 39, Whitespace = 40, NCName = 41;
    public static final int
            RULE_main = 0, RULE_locationPath = 1, RULE_absoluteLocationPathNoroot = 2,
            RULE_relativeLocationPath = 3, RULE_step = 4, RULE_axisSpecifier = 5,
            RULE_nodeTest = 6, RULE_predicate = 7, RULE_abbreviatedStep = 8, RULE_expr = 9,
            RULE_primaryExpr = 10, RULE_functionCall = 11, RULE_unionExprNoRoot = 12,
            RULE_pathExprNoRoot = 13, RULE_filterExpr = 14, RULE_orExpr = 15, RULE_andExpr = 16,
            RULE_equalityExpr = 17, RULE_relationalExpr = 18, RULE_additiveExpr = 19,
            RULE_multiplicativeExpr = 20, RULE_unaryExprNoRoot = 21, RULE_qName = 22,
            RULE_functionName = 23, RULE_variableReference = 24, RULE_nameTest = 25,
            RULE_nCName = 26;

    private static String[] makeRuleNames() {
        return new String[]{
                "main", "locationPath", "absoluteLocationPathNoroot", "relativeLocationPath",
                "step", "axisSpecifier", "nodeTest", "predicate", "abbreviatedStep",
                "expr", "primaryExpr", "functionCall", "unionExprNoRoot", "pathExprNoRoot",
                "filterExpr", "orExpr", "andExpr", "equalityExpr", "relationalExpr",
                "additiveExpr", "multiplicativeExpr", "unaryExprNoRoot", "qName", "functionName",
                "variableReference", "nameTest", "nCName"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'processing-instruction'", "'or'", "'and'", "'$'", null, null,
                null, "'/'", "'//'", "'('", "')'", "'['", "']'", "'-'", "'+'", "'.'",
                "'*'", "'`div`'", "'`mod`'", "'..'", "'@'", "','", "'|'", "'<'", "'>'",
                "'<='", "'>='", "'='", "'!='", "'^='", "'$='", "'*='", "'~='", "'!~'",
                "':'", "'::'", "'''", "'\"'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, "NodeType", "Number", "AxisName", "PATHSEP",
                "ABRPATH", "LPAR", "RPAR", "LBRAC", "RBRAC", "MINUS", "PLUS", "DOT",
                "MUL", "DIVISION", "MODULO", "DOTDOT", "AT", "COMMA", "PIPE", "LESS",
                "MORE_", "LE", "GE", "EQUALITY", "INEQUALITY", "START_WITH", "END_WITH",
                "CONTAIN_WITH", "REGEXP_WITH", "REGEXP_NOT_WITH", "COLON", "CC", "APOS",
                "QUOT", "Literal", "Whitespace", "NCName"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Xpath.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public XpathParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class MainContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public MainContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_main;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).enterMain(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitMain(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitMain(this);
            else return visitor.visitChildren(this);
        }
    }

    public final MainContext main() throws RecognitionException {
        MainContext _localctx = new MainContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_main);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                expr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LocationPathContext extends ParserRuleContext {
        public RelativeLocationPathContext relativeLocationPath() {
            return getRuleContext(RelativeLocationPathContext.class, 0);
        }

        public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
            return getRuleContext(AbsoluteLocationPathNorootContext.class, 0);
        }

        public LocationPathContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_locationPath;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterLocationPath(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).exitLocationPath(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitLocationPath(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LocationPathContext locationPath() throws RecognitionException {
        LocationPathContext _localctx = new LocationPathContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_locationPath);
        try {
            setState(58);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case NodeType:
                case AxisName:
                case DOT:
                case MUL:
                case DOTDOT:
                case AT:
                case NCName:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(56);
                    relativeLocationPath();
                }
                break;
                case PATHSEP:
                case ABRPATH:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(57);
                    absoluteLocationPathNoroot();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AbsoluteLocationPathNorootContext extends ParserRuleContext {
        public Token op;

        public RelativeLocationPathContext relativeLocationPath() {
            return getRuleContext(RelativeLocationPathContext.class, 0);
        }

        public TerminalNode PATHSEP() {
            return getToken(XpathParser.PATHSEP, 0);
        }

        public TerminalNode ABRPATH() {
            return getToken(XpathParser.ABRPATH, 0);
        }

        public AbsoluteLocationPathNorootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_absoluteLocationPathNoroot;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterAbsoluteLocationPathNoroot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).exitAbsoluteLocationPathNoroot(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitAbsoluteLocationPathNoroot(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() throws RecognitionException {
        AbsoluteLocationPathNorootContext _localctx = new AbsoluteLocationPathNorootContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_absoluteLocationPathNoroot);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                ((AbsoluteLocationPathNorootContext) _localctx).op = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == PATHSEP || _la == ABRPATH)) {
                    ((AbsoluteLocationPathNorootContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(61);
                relativeLocationPath();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RelativeLocationPathContext extends ParserRuleContext {
        public Token op;

        public List<StepContext> step() {
            return getRuleContexts(StepContext.class);
        }

        public StepContext step(int i) {
            return getRuleContext(StepContext.class, i);
        }

        public List<TerminalNode> PATHSEP() {
            return getTokens(XpathParser.PATHSEP);
        }

        public TerminalNode PATHSEP(int i) {
            return getToken(XpathParser.PATHSEP, i);
        }

        public List<TerminalNode> ABRPATH() {
            return getTokens(XpathParser.ABRPATH);
        }

        public TerminalNode ABRPATH(int i) {
            return getToken(XpathParser.ABRPATH, i);
        }

        public RelativeLocationPathContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_relativeLocationPath;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterRelativeLocationPath(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).exitRelativeLocationPath(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitRelativeLocationPath(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RelativeLocationPathContext relativeLocationPath() throws RecognitionException {
        RelativeLocationPathContext _localctx = new RelativeLocationPathContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_relativeLocationPath);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                step();
                setState(68);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == PATHSEP || _la == ABRPATH) {
                    {
                        {
                            setState(64);
                            ((RelativeLocationPathContext) _localctx).op = _input.LT(1);
                            _la = _input.LA(1);
                            if (!(_la == PATHSEP || _la == ABRPATH)) {
                                ((RelativeLocationPathContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            setState(65);
                            step();
                        }
                    }
                    setState(70);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StepContext extends ParserRuleContext {
        public AxisSpecifierContext axisSpecifier() {
            return getRuleContext(AxisSpecifierContext.class, 0);
        }

        public NodeTestContext nodeTest() {
            return getRuleContext(NodeTestContext.class, 0);
        }

        public List<PredicateContext> predicate() {
            return getRuleContexts(PredicateContext.class);
        }

        public PredicateContext predicate(int i) {
            return getRuleContext(PredicateContext.class, i);
        }

        public AbbreviatedStepContext abbreviatedStep() {
            return getRuleContext(AbbreviatedStepContext.class, 0);
        }

        public StepContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_step;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).enterStep(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitStep(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitStep(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StepContext step() throws RecognitionException {
        StepContext _localctx = new StepContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_step);
        int _la;
        try {
            setState(80);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case NodeType:
                case AxisName:
                case MUL:
                case AT:
                case NCName:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(71);
                    axisSpecifier();
                    setState(72);
                    nodeTest();
                    setState(76);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == LBRAC) {
                        {
                            {
                                setState(73);
                                predicate();
                            }
                        }
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                case DOT:
                case DOTDOT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(79);
                    abbreviatedStep();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AxisSpecifierContext extends ParserRuleContext {
        public TerminalNode AxisName() {
            return getToken(XpathParser.AxisName, 0);
        }

        public TerminalNode CC() {
            return getToken(XpathParser.CC, 0);
        }

        public TerminalNode AT() {
            return getToken(XpathParser.AT, 0);
        }

        public AxisSpecifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_axisSpecifier;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterAxisSpecifier(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).exitAxisSpecifier(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitAxisSpecifier(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AxisSpecifierContext axisSpecifier() throws RecognitionException {
        AxisSpecifierContext _localctx = new AxisSpecifierContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_axisSpecifier);
        int _la;
        try {
            setState(87);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(82);
                    match(AxisName);
                    setState(83);
                    match(CC);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(85);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == AT) {
                        {
                            setState(84);
                            match(AT);
                        }
                    }

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NodeTestContext extends ParserRuleContext {
        public NameTestContext nameTest() {
            return getRuleContext(NameTestContext.class, 0);
        }

        public TerminalNode NodeType() {
            return getToken(XpathParser.NodeType, 0);
        }

        public TerminalNode LPAR() {
            return getToken(XpathParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(XpathParser.RPAR, 0);
        }

        public TerminalNode Literal() {
            return getToken(XpathParser.Literal, 0);
        }

        public NodeTestContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_nodeTest;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).enterNodeTest(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitNodeTest(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitNodeTest(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NodeTestContext nodeTest() throws RecognitionException {
        NodeTestContext _localctx = new NodeTestContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_nodeTest);
        try {
            setState(97);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case AxisName:
                case MUL:
                case NCName:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(89);
                    nameTest();
                }
                break;
                case NodeType:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(90);
                    match(NodeType);
                    setState(91);
                    match(LPAR);
                    setState(92);
                    match(RPAR);
                }
                break;
                case T__0:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(93);
                    match(T__0);
                    setState(94);
                    match(LPAR);
                    setState(95);
                    match(Literal);
                    setState(96);
                    match(RPAR);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PredicateContext extends ParserRuleContext {
        public TerminalNode LBRAC() {
            return getToken(XpathParser.LBRAC, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RBRAC() {
            return getToken(XpathParser.RBRAC, 0);
        }

        public PredicateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_predicate;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).enterPredicate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitPredicate(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitPredicate(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PredicateContext predicate() throws RecognitionException {
        PredicateContext _localctx = new PredicateContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_predicate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                match(LBRAC);
                setState(100);
                expr();
                setState(101);
                match(RBRAC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AbbreviatedStepContext extends ParserRuleContext {
        public TerminalNode DOT() {
            return getToken(XpathParser.DOT, 0);
        }

        public TerminalNode DOTDOT() {
            return getToken(XpathParser.DOTDOT, 0);
        }

        public AbbreviatedStepContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_abbreviatedStep;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterAbbreviatedStep(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).exitAbbreviatedStep(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitAbbreviatedStep(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AbbreviatedStepContext abbreviatedStep() throws RecognitionException {
        AbbreviatedStepContext _localctx = new AbbreviatedStepContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_abbreviatedStep);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(103);
                _la = _input.LA(1);
                if (!(_la == DOT || _la == DOTDOT)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public OrExprContext orExpr() {
            return getRuleContext(OrExprContext.class, 0);
        }

        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).enterExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                orExpr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrimaryExprContext extends ParserRuleContext {
        public VariableReferenceContext variableReference() {
            return getRuleContext(VariableReferenceContext.class, 0);
        }

        public TerminalNode LPAR() {
            return getToken(XpathParser.LPAR, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RPAR() {
            return getToken(XpathParser.RPAR, 0);
        }

        public TerminalNode Literal() {
            return getToken(XpathParser.Literal, 0);
        }

        public TerminalNode Number() {
            return getToken(XpathParser.Number, 0);
        }

        public FunctionCallContext functionCall() {
            return getRuleContext(FunctionCallContext.class, 0);
        }

        public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_primaryExpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener)
                ((XpathListener) listener).enterPrimaryExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XpathListener) ((XpathListener) listener).exitPrimaryExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XpathVisitor)
                return ((XpathVisitor<? extends T>) visitor).visitPrimaryExpr(this);
            else return visitor.visitChildren(this);
        }
    }
